[tool.poetry]
name = "HM2_5"
version = "0.1.0"
description = ""
authors = ["Nikita-Chumak <https://github.com/Nikita-devel>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
names = "^0.3.0"
aiohttp = "^3.8.5"
aiofile = "^3.8.8"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
